--- a/css/index.css
+++ b/css/index.css
@@ -37,7 +37,7 @@
   margin-top: 40px;
   width: 600px;
 }
-.special .link-square-featured {
+.special .link-square {
   margin: 10px;
   float: left;
 }
