--- a/css/index.less
+++ b/css/index.less
@@ -57,7 +57,7 @@
     margin-top: 40px;
     width: 5 * @link-square-featured-gap + 5 * @link-square-featured-size;
   }
-  .link-square-featured {
+  .link-square {
     margin: @link-square-featured-gap / 2;
     float: left;
   }
