--- a/index.jade
+++ b/index.jade
@@ -37,41 +37,21 @@ body
     .container
       .row
         .links.mauto.clearfix
-          a.link-square-featured.lighter
-            .before
-              i.fa.fa-trophy.fa-2x
-              h4 挑战杯
-            .after
-              i.fa.fa-trophy.fa-2x
-              h4 挑战杯
-          a.link-square-featured.light
-            .before
-              i.fa.fa-laptop.fa-2x
-              h4 大创
-            .after
-              i.fa.fa-laptop.fa-2x
-              h4 大创
-          a.link-square-featured
-            .before
-              i.fa.fa-globe.fa-2x
-              h4 社会实践
-            .after
-              i.fa.fa-globe.fa-2x
-              h4 社会实践
-          a.link-square-featured.dark
-            .before
-              i.fa.fa-heart.fa-2x
-              h4 公益志愿
-            .after
-              i.fa.fa-heart.fa-2x
-              h4 公益志愿
-          a.link-square-featured.darker
-            .before
-              i.fa.fa-search.fa-2x
-              h4 学术科技
-            .after
-              i.fa.fa-search.fa-2x
-              h4 学术科技
+          a.link-square.lighter
+            i.fa.fa-trophy.fa-2x.link-square_icon
+            h4.link-square_desc 挑战杯
+          a.link-square.light
+            i.fa.fa-laptop.fa-2x.link-square_icon
+            h4.link-square_desc 大创
+          a.link-square
+            i.fa.fa-globe.fa-2x.link-square_icon
+            h4.link-square_desc 社会实践
+          a.link-square.dark
+            i.fa.fa-heart.fa-2x.link-square_icon
+            h4.link-square_desc 公益志愿
+          a.link-square.darker
+            i.fa.fa-search.fa-2x.link-square_icon
+            h4.link-square_desc 学术科技
   section.news.clearfix.bg-grey-1
     h2.f8.c-grey-2.tc 新闻
       span.c-grey-4.fl.ml1 NEWS
