--- a/css/theme.less
+++ b/css/theme.less
@@ -5,42 +5,51 @@
 /**
  * 方块链接
  */
-@link-square-bg-color: #0072e4;
+@link-square-bg-color: #45a59a; // rgb(69,165,154)
 @link-square-size: 100px;
 .link-square {
   display: block;
   width: @link-square-size;
   height: @link-square-size;
-  position: relative;
   text-align: center;
   color: #fff;
   background-color: @link-square-bg-color;
+  -webkit-transition: bottom 0.5s, opacity 0.5s, background-color 0.5s;
+  -moz-transition: bottom 0.5s, opacity 0.5s, background-color 0.5s;
+  -ms-transition: bottom 0.5s, opacity 0.5s, background-color 0.5s;
+  -o-transition: bottom 0.5s, opacity 0.5s, background-color 0.5s;
+  transition: bottom 0.5s, opacity 0.5s, background-color 0.5s;
   &:hover {
-    .link-square_icon {
-      font-size: 2.5em;
-      opacity: 1;
-    }
-    .link-square_desc {
-      font-size: 1.15em;
-      opacity: 1;
-    }
+    -webkit-transform: translate(0, -20px);
+    -moz-transform: translate(0, -20px);
+    -ms-transform: translate(0, -20px);
+    -o-transform: translate(0, -20px);
+    transform: translate(0, -20px);
+    //opacity: 0.7;
+    background-color: #1e4843 !important; // hsl(173,41%,20%);
   }
 }
 .link-square_icon {
-  position: absolute;
-  left: 0;
-  bottom: 42px;
+  margin-top: 20px;
   width: 100%;
-  opacity: 0.8;
+  bottom: 10px;
 }
 .link-square_desc {
-  position: absolute;
-  width: 100%;
-  margin: 0;
-  bottom: 16px;
-  text-align: center;
-  opacity: 0.75;
+  margin-top: 20px;
 }
+.link-square.lighter {
+  background-color: #76c6bd; // hsl(173,41%,62%);
+}
+.link-square.light {
+  background-color: #5abaaf; // hsl(173,41%,54%);
+}
+.link-square.dark {
+  background-color: #39897f; // hsl(173,41%,38%);
+}
+.link-square.darker {
+  background-color: #2d6c65; // hsl(173,41%,30%);
+}
+
 
 
 /**
@@ -133,10 +142,10 @@
     transition: top 0.5s;
 
     h4 {
-      margin-top: 20px;
-      width: 100%;
-      bottom: 10px;
-    }
+       margin-top: 20px;
+       width: 100%;
+       bottom: 10px;
+     }
     .fa {
       margin-top: 20px;
     }
