add font Raleway add slide effect for student-league

--- a/css/theme.css
+++ b/css/theme.css
@@ -1,3 +1,13 @@
+@font-face {
+  font-family: 'Raleway';
+  src: url('../fonts/Raleway-Light.ttf');
+}
+body {
+  font-family: Arial, Helvetica, sans-serif, 'Hiragino Sans GB', 'Microsoft YaHei', 'WenQuanYi Micro Hei';
+}
+.f-rw {
+  font-family: 'Raleway';
+}
 /**
  * 方块链接
  */
