--- a/css/theme.less
+++ b/css/theme.less
@@ -2,6 +2,19 @@
 @theme-color-2: #666;
 @assist-color-1: #eb8177; // rgb(235,129,119)
 @assist-color-2: #75b8e5; // rgb(117,184,229)
+
+@font-face {
+  font-family: 'Raleway';
+  src: url('../fonts/Raleway-Light.ttf');
+}
+body {
+  font-family: Arial, Helvetica, sans-serif, 'Hiragino Sans GB', 'Microsoft YaHei', 'WenQuanYi Micro Hei';
+}
+
+.f-rw {
+  font-family: 'Raleway';
+}
+
 /**
  * 方块链接
  */
