--- a/index.jade
+++ b/index.jade
@@ -32,7 +32,7 @@ body
     .banner-img
   section.special.clearfix
     h2.f8.c-grey-2.tc 专题
-      span.c-grey-4.fl.ml1 SPECIAL
+      span.c-grey-4.fl.ml1.f-rw SPECIAL
     p.c-grey-4.tc 专题的简单描述精简高大上一点点
     .container
       .row
@@ -54,7 +54,7 @@ body
             h4.link-square_desc 学术科技
   section.news.clearfix.bg-grey-1
     h2.f8.c-grey-2.tc 新闻
-      span.c-grey-4.fl.ml1 NEWS
+      span.c-grey-4.fl.ml1.f-rw NEWS
     .container
       .row
         .l-4
@@ -74,13 +74,13 @@ body
         .l-4
           a.link-img
             .link-img_img-wrap
-              .link-img_img(style="background-image:url('images/test-2.jpg');")
+              .link-img_img(style="background-image:url('images/test-3.jpg');")
             .link-img_text
               h3.link-img_title 新闻三标题
               p.link-img_desc 新闻描述描述描述描述描述描述描述
   section.notice.clearfix
     h2.f8.c-grey-2.tc 公告
-      span.c-grey-4.fl.ml1 NOTICE
+      span.c-grey-4.fl.ml1.f-rw NOTICE
     .container
       .row
         .l-5.m-5.s-6.x-8.l-offset-1.m-offset-1.s-offset-0.x-offset-2
@@ -105,21 +105,96 @@ body
               a 关于组织学生参加第十届成都青年创业大赛的通知
     .mt3.tc
       a.btn.mauto 更多公告
+  .youth-league-bg
   section.youth-league.pt5.clearfix
-    h2.f8.tc 川大团委
-      span.op5.fl.ml1 ABOUT US
-    button.arrow.left
-    button.arrow.right
-    .container
-      .row
-        section.l-8.m-10.s-12.x-12.l-offset-2.m-offset-1.s-offset-0.x-offset-0
-          h3.f5.tc.group-name 四川大学青年传媒
-          p.tc.group-into 四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍
-          p.tc.group-into 四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍
-          p.tc.group-into 四川大学青年传媒的介绍四川大学青年传媒的介绍
+    h2.title.f8.tc 川大团委
+      span.op5.fl.ml1.f-rw ABOUT US
+    button.arrow.left#yl-left
+    button.arrow.right#yl-right
+    .intro-list#intro-list(style="left:0;")
+      .intro-wrap.blue
+        .container
+          .row
+            section.l-8.m-10.s-12.x-12.l-offset-2.m-offset-1.s-offset-0.x-offset-0
+              h3.f5.tc.group-name 团委秘书处
+              p.tc.group-intro 四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍
+              p.tc.group-intro 四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍
+              p.tc.group-intro 四川大学青年传媒的介绍四川大学青年传媒的介绍
+      .intro-wrap.green
+        .container
+          .row
+            section.l-8.m-10.s-12.x-12.l-offset-2.m-offset-1.s-offset-0.x-offset-0
+              h3.f5.tc.group-name 学生会
+              p.tc.group-intro 四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍
+              p.tc.group-intro 四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍
+              p.tc.group-intro 四川大学青年传媒的介绍四川大学青年传媒的介绍
+      .intro-wrap.red
+        .container
+          .row
+            section.l-8.m-10.s-12.x-12.l-offset-2.m-offset-1.s-offset-0.x-offset-0
+              h3.f5.tc.group-name 团委组织部
+              p.tc.group-intro 四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍
+              p.tc.group-intro 四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍
+              p.tc.group-intro 四川大学青年传媒的介绍四川大学青年传媒的介绍
+      .intro-wrap.blue
+        .container
+          .row
+            section.l-8.m-10.s-12.x-12.l-offset-2.m-offset-1.s-offset-0.x-offset-0
+              h3.f5.tc.group-name 团委宣传部
+              p.tc.group-intro 四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍
+              p.tc.group-intro 四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍
+              p.tc.group-intro 四川大学青年传媒的介绍四川大学青年传媒的介绍
+      .intro-wrap.green
+        .container
+          .row
+            section.l-8.m-10.s-12.x-12.l-offset-2.m-offset-1.s-offset-0.x-offset-0
+              h3.f5.tc.group-name 团委文化艺术部
+              p.tc.group-intro 四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍
+              p.tc.group-intro 四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍
+              p.tc.group-intro 四川大学青年传媒的介绍四川大学青年传媒的介绍
+      .intro-wrap.red
+        .container
+          .row
+            section.l-8.m-10.s-12.x-12.l-offset-2.m-offset-1.s-offset-0.x-offset-0
+              h3.f5.tc.group-name 团委创业就业促进部
+              p.tc.group-intro 四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍
+              p.tc.group-intro 四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍
+              p.tc.group-intro 四川大学青年传媒的介绍四川大学青年传媒的介绍
+      .intro-wrap.blue
+        .container
+          .row
+            section.l-8.m-10.s-12.x-12.l-offset-2.m-offset-1.s-offset-0.x-offset-0
+              h3.f5.tc.group-name 科协
+              p.tc.group-intro 四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍
+              p.tc.group-intro 四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍
+              p.tc.group-intro 四川大学青年传媒的介绍四川大学青年传媒的介绍
+      .intro-wrap.green
+        .container
+          .row
+            section.l-8.m-10.s-12.x-12.l-offset-2.m-offset-1.s-offset-0.x-offset-0
+              h3.f5.tc.group-name 青志
+              p.tc.group-intro 四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍
+              p.tc.group-intro 四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍
+              p.tc.group-intro 四川大学青年传媒的介绍四川大学青年传媒的介绍
+      .intro-wrap.red
+        .container
+          .row
+            section.l-8.m-10.s-12.x-12.l-offset-2.m-offset-1.s-offset-0.x-offset-0
+              h3.f5.tc.group-name 社团联
+              p.tc.group-intro 四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍
+              p.tc.group-intro 四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍
+              p.tc.group-intro 四川大学青年传媒的介绍四川大学青年传媒的介绍
+      .intro-wrap.blue
+        .container
+          .row
+            section.l-8.m-10.s-12.x-12.l-offset-2.m-offset-1.s-offset-0.x-offset-0
+              h3.f5.tc.group-name 川大青年研究中心
+              p.tc.group-intro 四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍
+              p.tc.group-intro 四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍
+              p.tc.group-intro 四川大学青年传媒的介绍四川大学青年传媒的介绍
   section.student-ground
     h2.f8.c-grey-2.tc 学生园地
-      span.c-grey-4.fl.ml1 STUDENT
+      span.c-grey-4.fl.ml1.f-rw STUDENT
     .container
       .row
         .l-6.m-6.s-6.x-10.l-offset-1.m-offset-1.s-offset-0.x-offset-1
@@ -193,4 +268,6 @@ body
               em.op9 85998669
         section.x-12.s-12.m-3.l-3.qr-code
           h3 二维码
+  script(type="text/javascript" src="js/melon.js")
+  script(type="text/javascript" src="js/index.js")
 
