--- a/css/index.css
+++ b/css/index.css
@@ -45,19 +45,32 @@
  ** 公告
  */
 .notice {
-  margin: 40px 0 40px;
+  padding: 40px 0 40px;
+  background-color: #fff;
 }
 /*
  ** 团委介绍
  */
+.youth-league-bg {
+  position: fixed;
+  top: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  background-image: url('../images/index-bg-1.jpg');
+  -webkit-background-size: cover;
+  background-size: cover;
+}
 .youth-league {
   height: 300px;
   position: relative;
   color: #fff;
-  background-color: #60bcb1;
+  padding: 0;
+  overflow: hidden;
 }
-.youth-league h2 {
-  margin-bottom: 0;
+.youth-league .title {
+  position: absolute;
+  width: 100%;
 }
 .youth-league .arrow {
   position: absolute;
@@ -71,12 +84,32 @@
 .youth-league .right {
   right: 40px;
 }
+.youth-league .intro-list {
+  position: absolute;
+  z-index: -1;
+  width: 1000%;
+  height: 100%;
+}
+.youth-league .intro-wrap {
+  float: left;
+  height: 100%;
+  width: 10%;
+}
+.youth-league .red {
+  background-color: rgba(235, 129, 119, 0.5);
+}
+.youth-league .blue {
+  background-color: rgba(117, 184, 229, 0.5);
+}
+.youth-league .green {
+  background-color: rgba(96, 188, 177, 0.5);
+}
 .youth-league .group-name {
   text-align: center;
-  margin-bottom: 14px;
+  margin-top: 160px;
   opacity: 0.9;
 }
-.youth-league .group-into {
+.youth-league .group-intro {
   margin: auto;
   text-align: center;
   opacity: 0.9;
@@ -85,7 +118,8 @@
  ** 学生园地
  */
 .student-ground {
-  margin: 80px 0 40px;
+  padding: 80px 0 40px;
+  background-color: #fff;
 }
 .student-ground .notice-wrap {
   margin: auto;
