--- a/css/index.less
+++ b/css/index.less
@@ -68,7 +68,8 @@
  ** 公告
  */
 .notice {
-  margin: 40px 0 40px;
+  padding: 40px 0 40px;
+  background-color: #fff;
 }
 
 
@@ -81,13 +82,27 @@
 @subscribe-bg-color: rgb(96,188,177);
 @p-font-size: 14px;
 
+.youth-league-bg {
+  position: fixed;
+  top: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  background-image: url('../images/index-bg-1.jpg');
+  -webkit-background-size: cover;
+  background-size: cover;
+}
+
 .youth-league {
   height: 300px;
   position: relative;
   color: #fff;
-  background-color: @subscribe-bg-color;
-  h2 {
-    margin-bottom: 0;
+  padding: 0;
+  overflow: hidden;
+
+  .title {
+    position: absolute;
+    width: 100%;
   }
   .arrow {
     position: absolute;
@@ -101,17 +116,37 @@
   .right {
     right: 40px;
   }
+  .intro-list {
+    position: absolute;
+    z-index: -1;
+    width: 1000%;
+    height: 100%;
+  }
+  .intro-wrap {
+    float: left;
+    height: 100%;
+    width: 10%;
+  }
+  .red {
+    background-color: rgba(235,129,119,0.5);
+  }
+  .blue {
+    background-color: rgba(117,184,229,0.5);
+  }
+  .green {
+    background-color: rgba(96,188,177,0.5);
+  }
   .group-name {
     text-align: center;
-    margin-bottom: 1 * @p-font-size;
+    margin-top: 160px;
     opacity: 0.9;
   }
-  .group-into {
-    //width: 600px;
+  .group-intro {
     margin: auto;
     text-align: center;
     opacity: 0.9;
   }
+
 }
 
 
@@ -120,7 +155,8 @@
  */
 
 .student-ground {
-  margin: 80px 0 40px;
+  padding: 80px 0 40px;
+  background-color: #fff;
   .notice-wrap {
     margin: auto;
     width: 90%;
