--- a/css/index.less
+++ b/css/index.less
@@ -40,6 +40,38 @@
   .link-img {
     margin: auto;
   }
+  .news-list-wrap {
+    height: 400px;
+    width: 100%;
+    overflow: hidden;
+  }
+  .news-list {
+    position: absolute;
+    width: 200%;
+    top: 0;
+    left: 0;
+  }
+  .news-wrap {
+    float: left;
+    width: 12.5%;
+  }
+  .news-pagination {
+    bottom: 40px;
+    font-size: 0;
+  }
+  .page {
+    margin: 0 7px;
+    display: inline-block;
+    width: 45px;
+    height: 7px;
+    background-color: #76c6bd;
+  }
+  .page:hover, .page.active {
+    background-color: #2d6c65;
+  }
+  .page:hover {
+    cursor: pointer;
+  }
 }
 
 
@@ -88,7 +120,7 @@
   z-index: -1;
   width: 100%;
   height: 100%;
-  background-image: url('../images/index-bg-1.jpg');
+  background-image: url('../images/index-bg-3.jpg');
   -webkit-background-size: cover;
   background-size: cover;
 }
