--- a/css/theme.css
+++ b/css/theme.css
@@ -164,14 +164,15 @@ body {
 .link-img {
   position: relative;
   display: block;
-  width: 320px;
-  height: 320px;
+  width: 90%;
+  height: 300px;
+  margin: auto;
   background-color: #fff;
   overflow: hidden;
 }
 .link-img_img-wrap {
-  width: 320px;
-  height: 180px;
+  width: 100%;
+  height: 140px;
   background-color: #ccc;
 }
 .link-img_img {
@@ -181,7 +182,7 @@ body {
   background-size: cover;
 }
 .link-img_text {
-  height: 140px;
+  height: 160px;
   padding: 10px;
   color: #fff;
 }
