--- a/index.jade
+++ b/index.jade
@@ -56,28 +56,64 @@ body
     h2.f8.c-grey-2.tc 新闻
       span.c-grey-4.fl.ml1.f-rw NEWS
     .container
-      .row
-        .l-4
-          a.link-img
-            .link-img_img-wrap
-              .link-img_img(style="background-image:url('images/test-1.jpg');")
-            .link-img_text
-              h3.link-img_title 新闻标题
-              p.link-img_desc 新闻描述描述描述描述描述描述描述描述描述描述
-        .l-4
-          a.link-img
-            .link-img_img-wrap
-              .link-img_img(style="background-image:url('images/test-2.jpg');")
-            .link-img_text
-              h3.link-img_title 新闻2标题
-              p.link-img_desc 新闻描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述
-        .l-4
-          a.link-img
-            .link-img_img-wrap
-              .link-img_img(style="background-image:url('images/test-3.jpg');")
-            .link-img_text
-              h3.link-img_title 新闻三标题
-              p.link-img_desc 新闻描述描述描述描述描述描述描述
+      .news-list-wrap.pr#news-list-wrap
+        .news-list#news-list(style="left:0")
+          .news-wrap
+            a.link-img
+              .link-img_img-wrap
+                .link-img_img(style="background-image:url('images/test-1.jpg');")
+              .link-img_text
+                h3.link-img_title 新闻标题
+                p.link-img_desc 新闻描述描述描述描述描述描述描述描述描述描述
+          .news-wrap
+            a.link-img
+              .link-img_img-wrap
+                .link-img_img(style="background-image:url('images/test-1.jpg');")
+              .link-img_text
+                h3.link-img_title 新闻标题
+                p.link-img_desc 新闻描述描述描述描述描述描述描述描述描述描述
+          .news-wrap
+            a.link-img
+              .link-img_img-wrap
+                .link-img_img(style="background-image:url('images/test-1.jpg');")
+              .link-img_text
+                h3.link-img_title 新闻标题
+                p.link-img_desc 新闻描述描述描述描述描述描述描述描述描述描述
+          .news-wrap
+            a.link-img
+              .link-img_img-wrap
+                .link-img_img(style="background-image:url('images/test-1.jpg');")
+              .link-img_text
+                h3.link-img_title 新闻标题
+                p.link-img_desc 新闻描述描述描述描述描述描述描述描述描述描述
+          .news-wrap
+            a.link-img
+              .link-img_img-wrap
+                .link-img_img(style="background-image:url('images/test-1.jpg');")
+              .link-img_text
+                h3.link-img_title 新闻标题
+                p.link-img_desc 新闻描述描述描述描述描述描述描述描述描述描述
+          .news-wrap
+            a.link-img
+              .link-img_img-wrap
+                .link-img_img(style="background-image:url('images/test-1.jpg');")
+              .link-img_text
+                h3.link-img_title 新闻标题
+                p.link-img_desc 新闻描述描述描述描述描述描述描述描述描述描述
+          .news-wrap
+            a.link-img
+              .link-img_img-wrap
+                .link-img_img(style="background-image:url('images/test-1.jpg');")
+              .link-img_text
+                h3.link-img_title 新闻标题
+                p.link-img_desc 新闻描述描述描述描述描述描述描述描述描述描述
+          .news-wrap
+            a.link-img
+              .link-img_img-wrap
+                .link-img_img(style="background-image:url('images/test-1.jpg');")
+              .link-img_text
+                h3.link-img_title 新闻标题
+                p.link-img_desc 新闻描述描述描述描述描述描述描述描述描述描述
   section.notice.clearfix
     h2.f8.c-grey-2.tc 公告
       span.c-grey-4.fl.ml1.f-rw NOTICE
