add news list auto slide effect but without mouseover stop

--- a/index.jade
+++ b/index.jade
@@ -63,56 +63,56 @@ body
               .link-img_img-wrap
                 .link-img_img(style="background-image:url('images/test-1.jpg');")
               .link-img_text
-                h3.link-img_title 新闻标题
+                h3.link-img_title 000000
                 p.link-img_desc 新闻描述描述描述描述描述描述描述描述描述描述
           .news-wrap
             a.link-img
               .link-img_img-wrap
                 .link-img_img(style="background-image:url('images/test-1.jpg');")
               .link-img_text
-                h3.link-img_title 新闻标题
+                h3.link-img_title 1111111
                 p.link-img_desc 新闻描述描述描述描述描述描述描述描述描述描述
           .news-wrap
             a.link-img
               .link-img_img-wrap
                 .link-img_img(style="background-image:url('images/test-1.jpg');")
               .link-img_text
-                h3.link-img_title 新闻标题
+                h3.link-img_title 2222222
                 p.link-img_desc 新闻描述描述描述描述描述描述描述描述描述描述
           .news-wrap
             a.link-img
               .link-img_img-wrap
                 .link-img_img(style="background-image:url('images/test-1.jpg');")
               .link-img_text
-                h3.link-img_title 新闻标题
+                h3.link-img_title 33333333
                 p.link-img_desc 新闻描述描述描述描述描述描述描述描述描述描述
           .news-wrap
             a.link-img
               .link-img_img-wrap
                 .link-img_img(style="background-image:url('images/test-1.jpg');")
               .link-img_text
-                h3.link-img_title 新闻标题
+                h3.link-img_title 44444444
                 p.link-img_desc 新闻描述描述描述描述描述描述描述描述描述描述
           .news-wrap
             a.link-img
               .link-img_img-wrap
                 .link-img_img(style="background-image:url('images/test-1.jpg');")
               .link-img_text
-                h3.link-img_title 新闻标题
+                h3.link-img_title 55555555
                 p.link-img_desc 新闻描述描述描述描述描述描述描述描述描述描述
           .news-wrap
             a.link-img
               .link-img_img-wrap
                 .link-img_img(style="background-image:url('images/test-1.jpg');")
               .link-img_text
-                h3.link-img_title 新闻标题
+                h3.link-img_title 66666666666
                 p.link-img_desc 新闻描述描述描述描述描述描述描述描述描述描述
           .news-wrap
             a.link-img
               .link-img_img-wrap
                 .link-img_img(style="background-image:url('images/test-1.jpg');")
               .link-img_text
-                h3.link-img_title 新闻标题
+                h3.link-img_title 77777777
                 p.link-img_desc 新闻描述描述描述描述描述描述描述描述描述描述
   section.notice.clearfix
     h2.f8.c-grey-2.tc 公告
