--- a/css/index.less
+++ b/css/index.less
@@ -1,3 +1,28 @@
+.title {
+  margin: 60px auto 0;
+  text-align: center;
+}
+.title-desc {
+  position: relative;
+  text-align: center;
+  color: #555;
+  font-size: 16px;
+  font-weight: 300;
+  margin: 0;
+  &:after {
+
+  }
+}
+.divider {
+  display: block;
+  //position: absolute;
+  //top: 0;
+  margin: 25px auto 40px;
+  width: 70px;
+  height: 5px;
+  background-color: #2d6c65;
+}
+
 /*
  ** 页头 header
  */
@@ -31,12 +56,14 @@
 
 }
 
+
 /*
  ** 新闻
  */
 
 .news {
   padding: 80px 0 50px;
+  background-color: #f2f2f2;
   .link-img {
     margin: auto;
   }
@@ -48,6 +75,7 @@
   .news-list {
     position: absolute;
     width: 200%;
+    padding: 20px 0 20px;
     top: 0;
     left: 0;
   }
@@ -87,11 +115,9 @@
   background-color: rgb(221,226,229);
   .links {
     margin-top: 40px;
-    width: 5 * @link-square-featured-gap + 5 * @link-square-featured-size;
   }
   .link-square {
     margin: @link-square-featured-gap / 2;
-    float: left;
   }
 }
 
@@ -126,7 +152,7 @@
 }
 
 .youth-league {
-  height: 300px;
+  height: 360px;
   position: relative;
   color: #fff;
   padding: 0;
@@ -134,7 +160,15 @@
 
   .title {
     position: absolute;
+    margin: 0;
+    top: 40px;
     width: 100%;
+  }
+  .title-desc {
+    width: 100%;
+    position: absolute;
+    top: 90px;
+    color: white;
   }
   .arrow {
     position: absolute;
@@ -170,7 +204,7 @@
   }
   .group-name {
     text-align: center;
-    margin-top: 160px;
+    margin-top: 156px;
     opacity: 0.9;
   }
   .group-intro {
