--- a/css/index.less
+++ b/css/index.less
@@ -27,34 +27,101 @@
  ** 页头 header
  */
 
-@header-height: 140px;
-@header-bg-color: #001e3c;
+@header-height: 700px;
+@header-bg-color: #777;
+@text-top: 220px;
+@title-font-size: 116px;
 
 .header {
-  //width: 100%;
+  min-width: 500px;
+  z-index: 1;
+  position: relative;
   height: @header-height;
-  background-color: @header-bg-color;
+  .bg-img {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    z-index: -2;
+  }
+  .bg-layer {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(30,72,67,0.5);
+    z-index: -1;
+  }
+  .header-text {
+    width: 100%;
+    position: absolute;
+    top: @text-top;
+    text-align: center;
+  }
+  .welcome {
+    font-family: Raleway;
+    color: #fff;
+    font-size: 40px;
+    margin: 0;
+    opacity: 0.8;
+  }
+  .title {
+    margin: 0;
+    //width: 100%;
+    line-height: @title-font-size;
+    color: #fff;
+    text-align: center;
+    font-size: @title-font-size;
+    font-weight: 900;
+  }
+  .desc {
+    //width: 100%;
+    font-size: 24px;
+    font-weight: 300;
+    color: #fff;
+    text-align: center;
+    opacity: 0.8;
+    p {
+      margin: 0;
+    }
+  }
+  //.one {
+  //  top: 250px;
+  //}
+  //.two {
+  //  top: 300px;
+  //}
+  .nav {
+    opacity: 0.8;
+    width: 100%;
+    position: absolute;
+    bottom: 80px;
+  }
+  .navbar {
+    display: inline-block;
+    //margin: auto;
+  }
+
+  //background-image: url('../images/index-bg-4.jpg');
+  //-webkit-background-size: cover;
+  //background-size: cover;
+  //background-position: center;
 }
 
-.banner {
-  //height: 450px;
-  background-color: #777;
-  .banner-img {
-    height: 450px;
-    background-image: url('../images/banner-1.jpg');
-    -webkit-background-size: cover;
-    background-size: cover;
-  }
-}
+//.banner {
+//  //height: 450px;
+//  background-color: #777;
+//  .banner-img {
+//    height: 450px;
+//    background-image: url('../images/banner-1.jpg');
+//    -webkit-background-size: cover;
+//    background-size: cover;
+//  }
+//}
 
 
 /*
  ** 导航 nav
  */
 
-.nav {
-
-}
 
 
 /*
@@ -126,7 +193,7 @@
  ** 公告
  */
 .notice {
-  padding: 40px 0 40px;
+  padding: 80px 0 50px;
   background-color: #fff;
 }
 
@@ -140,7 +207,7 @@
 @subscribe-bg-color: rgb(96,188,177);
 @p-font-size: 14px;
 
-.youth-league-bg {
+.header-bg {
   position: fixed;
   top: 0;
   z-index: -1;
@@ -221,7 +288,7 @@
  */
 
 .student-ground {
-  padding: 80px 0 40px;
+  padding: 80px 0 50px;
   background-color: #fff;
   .notice-wrap {
     margin: auto;
