--- a/css/index.less
+++ b/css/index.less
@@ -15,12 +15,41 @@
 }
 .divider {
   display: block;
-  //position: absolute;
-  //top: 0;
   margin: 25px auto 40px;
   width: 70px;
   height: 5px;
   background-color: #2d6c65;
+}
+
+.return-top {
+  display: block;
+  z-index: 9;
+  height: 36px;
+  line-height: 36px;
+  width: 36px;
+  position: fixed;
+  top: 500px;
+  right: 80px;
+  border: 0;
+  border-radius: 4px;
+  background-color: #45a59a;
+  opacity: 0.5;
+  text-align: center;
+  -webkit-transition: opacity 0.5s;
+  -moz-transition: opacity 0.5s;
+  -ms-transition: opacity 0.5s;
+  -o-transition: opacity 0.5s;
+  transition: opacity 0.5s;
+  &:after {
+    content: '\f106';
+    font-family: FontAwesome;
+    font-size: 20px;
+    color: #fff;
+  }
+  &:hover {
+    cursor: pointer;
+    opacity: 1;
+  }
 }
 
 /*
@@ -33,10 +62,15 @@
 @title-font-size: 116px;
 
 .header {
-  min-width: 500px;
+  overflow: hidden;
   z-index: 1;
   position: relative;
   height: @header-height;
+  .searchbar {
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
   .bg-img {
     position: absolute;
     bottom: 0;
@@ -65,7 +99,6 @@
   }
   .title {
     margin: 0;
-    //width: 100%;
     line-height: @title-font-size;
     color: #fff;
     text-align: center;
@@ -99,7 +132,21 @@
     display: inline-block;
     //margin: auto;
   }
-
+  @media (max-width: 767px) {
+    .title {
+      font-size: 100px;
+    }
+    .navbar {
+      a {
+        font-size: 16px;
+        padding: 0 8px;
+      }
+    }
+    .searchbar {
+      left: 0;
+      margin: auto;
+    }
+  }
   //background-image: url('../images/index-bg-4.jpg');
   //-webkit-background-size: cover;
   //background-size: cover;
@@ -309,8 +356,10 @@
         }
       }
     }
-    //background-color: #cccccc;
     .title, .info {
+      -ms-text-justify: distribute;
+      text-justify: distribute;
+      text-align: justify;
       line-height: 20px;
       margin: 0;
       padding: 0;
@@ -339,9 +388,13 @@
  */
 
 @footer-height: 200px;
-@footer-bg-color: rgb(6,50,79);
+@footer-bg-color: #06324f;
+
 
 .footer {
+  padding: 0 0 40px;
+  opacity:0.7;
+  background-color: @footer-bg-color;
   //height: @footer-height;
   em {
     font-style: italic;
@@ -358,7 +411,7 @@
     line-height: 60px;
     margin: 0;
   }
-  background-color: @footer-bg-color;
+
   .useful-links {
     li {
       opacity: 0.7;
@@ -375,6 +428,8 @@
     }
   }
   .qr-code {
-
+    .img-qrcode {
+      height: 150px;
+    }
   }
 }
